packages/swc-plugin-workflow/transform/tests/errors/misplaced-module-directive/output-step.js
// This should error - directive after import
'use step';
export async function test() {
    return 42;
}
